# RoboticsFinalProject

./: .gitignore  AnushasPsuedocode.txt  DylanPseudocode  HelpfulResources!  ShruthisPsuedocode  TaskList.txt
install/: local_setup.sh  setup.sh
install/finalProject/share/ament_index/resource_index/parent_prefix_path/: finalProject
install/finalProject/share/finalProject/: local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
install/finder_program/share/finder_program/: package.bash  package.dsv  package.sh  package.xml  package.zsh
install/finder_program/share/finder_program/cmake/: finder_programConfig.cmake
log/: latest_build
src/finalProject/: CMakeLists.txt  package.xml
src/finalProject/include/finalProject/: navigation.hpp
src/finalProject/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/finalProject/install/finalProject/share/finalProject/: package.bash  package.zsh
src/finalProject/launch/: controller.launch.py
src/finalProject/log/: latest_build
src/finalProject/src/: locomotion.cpp  nav.cpp  nav.hpp  navRevised.cpp  navRevisedAnusha.cpp  navigation.cpp  navigation2.cpp  perception.cpp  perceptionTest.cpp
src/install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
src/install/finalProject/share/finalProject/: local_setup.dsv  local_setup.sh  package.dsv  package.sh
src/install/finalProject/share/finalProject/cmake/: finalProjectConfig.cmake
src/log/: latest_build
